# so3

./: .bumpversion.cfg  .gitignore  CMakeLists.txt  COPYRIGHT.txt  MANIFEST.in  README.md  SO3.sublime-project  conanfile.py  conanfile.txt  exclusive_profile.txt  exclusive_profile_all.txt  expected_output.txt  makefile  pyproject.toml  run_test.sh  run_tests  setup.cfg  setup.py  svn-commit.tmp  timing_test_L0016_N0016.txt  timing_test_L0032_N0032.txt  timing_test_L0064_N0064.txt  timing_test_L0128_N0004.txt  timing_test_L0128_N0128.txt  timing_test_L0256_N0004.txt  timing_test_L0512_N0004.txt  timings_errors.sh  timings_errors_12d.sh  timings_errors_22h.sh  timings_errors_3d.sh  timings_errors_L_2048_N_4.csv
.github/workflows/: cmake.yml  conan.yml  python.yml
cmake/: conan_dependencies.cmake  exporting.cmake  so3Config.in.cmake
cmake/ssht/: CMakeLists.txt
doc/: index.html
doc/c/html/: annotated.html  classes.html  dir_ce529cfc253c0fefd7c023914bed4c85.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  so3__about_8c.html  so3__about_8c_source.html  so3__core_8c.html  so3__core_8c_source.html  so3__core_8h.html  so3__core_8h_source.html  so3__error_8h.html  so3__sampling_8c.html  so3__sampling_8c_source.html  so3__sampling_8h.html  so3__test_8c.html  so3__test_8c_source.html  so3__test__csv_8c.html  so3__test__csv_8c_source.html  so3__types_8h.html
docs/: index.html
docs/c/: annotated.html  classes.html  dir_000003_000000.html  dir_000004_000000.html  dir_000005_000000.html  dir_3492a7609db06e30f44797521f9c21b0.html  dir_3492a7609db06e30f44797521f9c21b0_dep.map  dir_3492a7609db06e30f44797521f9c21b0_dep.md5  dir_3b19ecf29356981f494745fbef7e56bf.html  dir_3b19ecf29356981f494745fbef7e56bf_dep.map  dir_3b19ecf29356981f494745fbef7e56bf_dep.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d9c5610caac57b817a8e13990b454526.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  so3_8h.html  so3_8h__dep__incl.map  so3_8h__dep__incl.md5  so3_8h__incl.map  so3_8h__incl.md5  so3_8h_source.html  so3__about_8c.html  so3__about_8c__incl.map  so3__about_8c__incl.md5  so3__adjoint_8c.html  so3__adjoint_8c__incl.map  (+89 more)
docs/c/html/: dir_3b19ecf29356981f494745fbef7e56bf.html  dir_7c861e55c600efcf9710f0362912c8ed.html  dirs.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  menudata.js  so3__about_8c.html  so3__about_8c_source.html  so3__adjoint_8c.html  so3__adjoint_8c_source.html  so3__core_8c.html  so3__core_8c_source.html  so3__error_8h_source.html  so3__sampling_8c.html  so3__sampling_8c_source.html  so3__sampling_8h_source.html  so3__test_8c.html  so3__test_8c_source.html  so3__test__csv_8c.html  so3__test__csv_8c_source.html  so3__types_8h_source.html  structso3__parameters__t.html
docs/c/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  (+19 more)
include/: so3.h  so3_adjoint.h  so3_core.h  so3_sampling.h  so3_types.h  so3_version.in.h
include/c/: so3.h
include/so3/: so3_sampling.h  so3_types.h
lib/c/: .gitignore
prototypes/: forward_for_dft.m  forward_for_fft.m  inverse_direct.m  inverse_direct_dl.m  inverse_direct_dln.m  inverse_direct_v.m  inverse_for_dft.m  inverse_for_fft.m  inverse_sov_dft.m  inverse_sov_fft.m  test_forward.m  test_inverse.m
prototypes/so3/: so3_direct_forward.m  so3_direct_inverse.m  so3_direct_inverse_1d.m  so3_direct_inverse_md.m  so3_direct_inverse_no_array.m  so3_sampling.m  so3_via_ssht_forward.m  so3_via_ssht_inverse.m  test_all.m  test_mem_acc.m  validate_all.m
prototypes/ssht/: forward_sov_for_dft.m  forward_sov_for_fft_phase.m  forward_sov_for_fft_space.m  inverse_direct.m  inverse_direct_dl.m  inverse_direct_v.m  inverse_sov_fft_phase.m  inverse_sov_fft_space.m  inverse_sov_for_dft.m  inverse_sov_for_fft_phase.m  inverse_sov_for_fft_space.m  test_all.m  test_forward.m  test_inverse.m
src/c/: .gitignore  CMakeLists.txt  so3.h  so3_about.c  so3_adjoint.c  so3_adjoint.h  so3_conv.c  so3_conv.h  so3_core.c  so3_core.h  so3_error.h  so3_sampling.c  so3_sampling.h  so3_test.c  so3_test_csv.c  so3_test_utils.c  so3_test_utils.h  so3_types.h
src/c/unittest/: so3_unittest.c
src/matlab/: .gitignore  so3_adjoint_forward_test.m  so3_adjoint_inverse_test.m  so3_demo0.m  so3_demo1.m  so3_demo2.m  so3_demo3.m  so3_demo4.m  so3_demo5.m  so3_demo6.m  so3_demo_basic.m  so3_demo_basic_Nmode_L.m  so3_demo_basic_direct.m  so3_demo_compact_storage.m  so3_demo_covariance.m  so3_demo_errors_timing.m  so3_demo_even_n.m  so3_demo_lower_band_limit.m  so3_demo_plot_wigner.m  so3_demo_real_signal.m  so3_demo_real_signal_direct.m  so3_demo_storage_order.m  so3_demo_symmetric_sampling.m  so3_elmn2ind.m  so3_elmn2ind_mex.c  so3_explicit_matrix.m  so3_forward.m  so3_forward_adjoint_direct.m  so3_forward_adjoint_direct_mex.c  so3_forward_direct.m  so3_forward_direct_mex.c  so3_forward_mex.c  so3_ind2elmn.m  so3_ind2elmn_mex.c  so3_inverse.m  so3_inverse_adjoint_direct.m  so3_inverse_adjoint_direct_mex.c  so3_inverse_direct.m  so3_inverse_direct_mex.c  so3_inverse_mex.c  (+8 more)
src/pyso3/: CMakeLists.txt  __init__.py
src/python/: pyso3.c  pyso3.pyx  pyso3_example.py
src/so3/: CMakeLists.txt  __init__.py  bindings.pyx
test_package/: CMakeLists.txt  conanfile.py  example.c
tests/: CMakeLists.txt  test_convolution.c  test_pyso3.py  test_sampling.c  test_so3.c  utilities.c  utilities.h
(+1 files in other folders)
